projects/vb6parse/snapshots/syntax/statements/control_flow/on_statements/on_goto_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/on_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnGoToStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: "   "
                - kind: Identifier
                  text: choice
                - kind: Whitespace
                  text: "   "
                - kind: GotoKeyword
                  text: GoTo
                - kind: Whitespace
                  text: "   "
                - kind: Identifier
                  text: Label1
                - kind: Whitespace
                  text: "  "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: "  "
                - kind: Identifier
                  text: Label2
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
